@@ -86,7 +86,7 @@
           android:layout_weight="1"
           android:layout_marginEnd="16dp"
           android:textColor="@color/on_primary"
-          android:text="@{viewModel.isActionEdit ? @string/title_edit_barcode : @string/title_create_barcode}" />
+          android:text="@{viewModel.isActionEdit ? @string/title_edit_qu_conversion : @string/title_create_qu_conversion}" />
 
       </LinearLayout>
 
