@@ -150,6 +150,7 @@
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:layout_marginBottom="8dp"
+              android:visibility="@{viewModel.isQuantityUnitStockChangeable() ? View.GONE : View.VISIBLE}"
               app:strokeWidth="2dp"
               app:strokeColor="@color/retro_red_fg"
               app:contentPadding="16dp"
@@ -166,10 +167,31 @@
 
             </com.google.android.material.card.MaterialCardView>
 
+            <com.google.android.material.card.MaterialCardView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="16dp"
+              android:layout_marginEnd="16dp"
+              android:layout_marginBottom="8dp"
+              android:visibility="@{viewModel.isQuantityUnitStockChangeable() ? View.VISIBLE : View.GONE}"
+              app:contentPadding="16dp"
+              app:cardElevation="0dp"
+              app:cardCornerRadius="12dp"
+              app:cardBackgroundColor="@color/on_background_variant">
+
+              <TextView
+                style="@style/Widget.Grocy.TextView.Paragraph"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/on_background"
+                android:text="@string/msg_help_qu_stock_changeable" />
+
+            </com.google.android.material.card.MaterialCardView>
+
             <LinearLayout
               style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
               android:onClick="@{() -> viewModel.showQuBottomSheet(formData.STOCK)}"
-              android:alpha="@{viewModel.actionEdit ? 0.4f : 1.0f}">
+              android:alpha="@{viewModel.isQuantityUnitStockChangeable() ? 1.0f : 0.4f}">
 
               <ImageView
                 style="@style/Widget.Grocy.ImageView.ListItem.Icon"
